// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge renders badge with custom size and theme 1`] = `
<View>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#81C784",
        "borderBottomLeftRadius": 100000,
        "borderBottomRightRadius": 100000,
        "borderTopLeftRadius": 100000,
        "borderTopRightRadius": 100000,
        "flexDirection": "column",
        "height": 32,
        "justifyContent": "center",
        "maxHeight": 32,
        "maxWidth": 32,
        "minHeight": 32,
        "minWidth": 32,
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "width": 32,
      }
    }
    testID="badge"
  >
    <Text
      style={
        {
          "color": "#121312",
          "fontFamily": "DM Sans",
          "fontSize": 14,
        }
      }
      suppressHighlighting={true}
    >
      ok
    </Text>
  </View>
</View>
`;

exports[`Badge renders circular badge 1`] = `
<View>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFF1E0",
        "borderBottomLeftRadius": 100000,
        "borderBottomRightRadius": 100000,
        "borderTopLeftRadius": 100000,
        "borderTopRightRadius": 100000,
        "flexDirection": "column",
        "height": 28,
        "justifyContent": "center",
        "maxHeight": 28,
        "maxWidth": 28,
        "minHeight": 28,
        "minWidth": 28,
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "width": 28,
      }
    }
    testID="badge"
  >
    <Text
      style={
        {
          "color": "#FF8C00",
          "fontFamily": "DM Sans",
          "fontSize": 14,
        }
      }
      suppressHighlighting={true}
    >
      12+
    </Text>
  </View>
</View>
`;

exports[`Badge renders non-circular badge 1`] = `
<View>
  <View
    style={
      {
        "alignSelf": "flex-start",
        "backgroundColor": "#FFF1E0",
        "borderBottomLeftRadius": 50,
        "borderBottomRightRadius": 50,
        "borderTopLeftRadius": 50,
        "borderTopRightRadius": 50,
        "gap": 4,
        "paddingBottom": 4,
        "paddingLeft": 12,
        "paddingRight": 12,
        "paddingTop": 4,
      }
    }
    testID="badge"
  >
    <Text
      style={
        {
          "color": "#FF8C00",
          "fontFamily": "DM Sans",
          "fontSize": 14,
        }
      }
      suppressHighlighting={true}
    >
      Label
    </Text>
  </View>
</View>
`;